class TripStatus {
  static AVAILABLE = "available";
  static BOOKED = "booked";
  static IN_PROGRESS = "in_progress";
  static FINISHED = "finished";
  static CANCELLED = "cancelled";
}

module.exports = TripStatus;
